# project

./: README.md
Secure Vault/: readme.md
Secure Vault/assets/docs/: preview
Secure Vault/src/: main.cpp
Snake Game/: CMakeLists.txt  Readme.md
Snake Game/src/: main.cpp
